lab probability done

--- a/lab-intro-probability.ipynb
+++ b/lab-intro-probability.ipynb
@@ -38,11 +38,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability that all passengers will have seats is: 85.05%\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "#code here\n",
+    "#k - Plain seats = 450\n",
+    "#n - number of sold tikctes = 460\n",
+    "#p - missing flight probability = 0,03\n",
+    "#q - probability of showing up\n",
+    "\n",
+    "#number of passangers that may lose the fligth = 460 * 0.03 = 14\n",
+    "#number of passangers that will certainly travel = 460 * 0.97 = 446\n",
+    "\n",
+    "import numpy as np\n",
+    "from scipy.stats import norm\n",
+    "\n",
+    "n = 460\n",
+    "k = 450\n",
+    "p = 0.03\n",
+    "q = 0.97\n",
+    "\n",
+    "mean = n*q\n",
+    "variance = mean * p\n",
+    "std_dev = np.sqrt(variance)\n",
+    "\n",
+    "z_score = (k-mean)/std_dev\n",
+    "\n",
+    "probability = norm.cdf(z_score)\n",
+    "\n",
+    "print(f\"Probability that all passengers will have seats is: {round(probability*100,2)}%\")"
    ]
   },
   {
@@ -72,11 +105,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of representative successfully solves a customer complaint after three attempts is 65.7%\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "#code here\n",
+    "from scipy.stats import geom\n",
+    "\n",
+    "p = 0.3\n",
+    "p_solve = geom(p)\n",
+    "\n",
+    "print(f\"The probability of representative successfully solves a customer complaint after three attempts is {round(p_solve.cdf(3)*100,2)}%\")"
    ]
   },
   {
@@ -107,11 +154,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of website server being overhelmed is 0.15%\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "from scipy.stats import poisson #discrete probability distribution that expresses the probability of a given number of events ocurring in a fixed interval of time or space;\n",
+    "\n",
+    "mu = 500 #average number of visits per hour;\n",
+    "poisson_dist = poisson(mu) \n",
+    "prob = poisson_dist.pmf(550) #pmf allows to visualize the likelihood of obtaining each possible outcome;\n",
+    "prob = round(prob*100,2)\n",
+    "\n",
+    "print(f\"The probability of website server being overhelmed is {prob}%\") "
    ]
   },
   {
@@ -123,11 +185,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of website being overhelmed at some point during a day is 98.71%\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "mu = 500 #average number of visits per hour;\n",
+    "poisson_dist = poisson(mu) \n",
+    "prob = poisson_dist.cdf(550) #cdf is the obtainig the comallatively pdf outcome;\n",
+    "prob = round(prob*100,2) \n",
+    "\n",
+    "print(f\"The probability of website being overhelmed at some point during a day is {prob}%\") "
    ]
   },
   {
@@ -157,10 +232,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of a client arrival in the next 5 minutes is 55.07%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import expon\n",
+    "\n",
+    "lambda_value = 0.16 #the parameter represents the rate of customers that arrives every 10 minutes\n",
+    "lambda_inv = expon(scale = 1/lambda_value)\n",
+    "prob = round(lambda_inv.cdf(5)*100,2)\n",
+    "\n",
+    "print(f\"The probability of a client arrival in the next 5 minutes is {prob}%\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -173,10 +264,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of employee take a 5minutes break after 15min with no customer is 90.93%\n"
+     ]
+    }
+   ],
+   "source": [
+    "lambda_value = 0.16 #the parameter represents the rate of customers that arrives every 10 minutes\n",
+    "lambda_inv = expon(scale = 1/lambda_value)\n",
+    "prob = round(lambda_inv.cdf(15)*100,2)\n",
+    "\n",
+    "print(f\"The probability of employee take a 5minutes break after 15min with no customer is {prob}%\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,11 +301,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of the birds weight being between 140g and 160g is 68.27%\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "from scipy.stats import norm\n",
+    "\n",
+    "mean = 150\n",
+    "std = 10\n",
+    "\n",
+    "norm_dist = norm(loc = mean, scale = std)\n",
+    "prob = round(((norm_dist.cdf(160) - norm_dist.cdf(140))*100),2)\n",
+    "print(f\"The probability of the birds weight being between 140g and 160g is {prob}%\")"
    ]
   },
   {
@@ -219,11 +339,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#code here"
+    "#code here\n",
+    "from scipy.stats import expon\n",
+    "\n",
+    "#the parameter represents the rate of events occuring per unit of time\n",
+    "lambda_value = 300\n",
+    "\n",
+    "lambda_inv = expon(scale = 1/lambda_value)\n",
+    "\n",
+    "lambda_inv.cdf(180)"
    ]
   }
  ],
@@ -243,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
