updated lab intro probability

--- a/lab-intro-probability.ipynb
+++ b/lab-intro-probability.ipynb
@@ -38,44 +38,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability that all passengers will have seats is: 85.05%\n"
+      "Probability that all passengers will have seats is: 88.45%\n"
      ]
     }
    ],
    "source": [
-    "#code here\n",
-    "#k - Plain seats = 450\n",
-    "#n - number of sold tikctes = 460\n",
-    "#p - missing flight probability = 0,03\n",
-    "#q - probability of showing up\n",
-    "\n",
-    "#number of passangers that may lose the fligth = 460 * 0.03 = 14\n",
-    "#number of passangers that will certainly travel = 460 * 0.97 = 446\n",
-    "\n",
     "import numpy as np\n",
-    "from scipy.stats import norm\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import norm, binom, geom, expon, poisson\n",
     "\n",
     "n = 460\n",
-    "k = 450\n",
-    "p = 0.03\n",
-    "q = 0.97\n",
+    "p = 0.97\n",
+    "binom_dist = binom(n,p)\n",
+    "prob = binom_dist.cdf(450) #probability of at least 450 seats be occupied by a passanger\n",
     "\n",
-    "mean = n*q\n",
-    "variance = mean * p\n",
-    "std_dev = np.sqrt(variance)\n",
-    "\n",
-    "z_score = (k-mean)/std_dev\n",
-    "\n",
-    "probability = norm.cdf(z_score)\n",
-    "\n",
-    "print(f\"Probability that all passengers will have seats is: {round(probability*100,2)}%\")"
+    "print(f\"Probability that all passengers will have seats is: {round(prob*100,2)}%\")"
    ]
   },
   {
@@ -105,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -117,13 +101,13 @@
     }
    ],
    "source": [
-    "#code here\n",
     "from scipy.stats import geom\n",
     "\n",
     "p = 0.3\n",
     "p_solve = geom(p)\n",
+    "prob = p_solve.cdf(3) #probability of achiving success after 3 trials (the sum of 3 pmf's) \n",
     "\n",
-    "print(f\"The probability of representative successfully solves a customer complaint after three attempts is {round(p_solve.cdf(3)*100,2)}%\")"
+    "print(f\"The probability of representative successfully solves a customer complaint after three attempts is {round(prob*100,2)}%\")"
    ]
   },
   {
@@ -154,26 +138,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability of website server being overhelmed is 0.15%\n"
+      "The probability of website server being overhelmed in one hour is 1.29%\n"
      ]
     }
    ],
    "source": [
-    "from scipy.stats import poisson #discrete probability distribution that expresses the probability of a given number of events ocurring in a fixed interval of time or space;\n",
+    "from scipy.stats import poisson #expresses the probability of a given number of events ocurring in a fixed interval of time or space;\n",
     "\n",
     "mu = 500 #average number of visits per hour;\n",
     "poisson_dist = poisson(mu) \n",
-    "prob = poisson_dist.pmf(550) #pmf allows to visualize the likelihood of obtaining each possible outcome;\n",
-    "prob = round(prob*100,2)\n",
+    "prob = poisson_dist.cdf(550) #cdf allows to visualize the cumulative probability of having the 550 visits;\n",
+    "prob = 1 - prob #this operation returns the probability of being overhelmed in 1 hour\n",
+    "#prob = round(prob*100,2)\n",
     "\n",
-    "print(f\"The probability of website server being overhelmed is {prob}%\") "
+    "print(f\"The probability of website server being overhelmed in one hour is {round((prob*100),2)}%\") "
    ]
   },
   {
@@ -185,22 +170,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability of website being overhelmed at some point during a day is 98.71%\n"
+      "The probability of website being overhelmed at some point during a day is 1.0%\n"
      ]
     }
    ],
    "source": [
-    "mu = 500 #average number of visits per hour;\n",
-    "poisson_dist = poisson(mu) \n",
-    "prob = poisson_dist.cdf(550) #cdf is the obtainig the comallatively pdf outcome;\n",
-    "prob = round(prob*100,2) \n",
+    "p = prob #p from the previous exercise is the probability of being overhelmed in 1 hour\n",
+    "n = 24 #hours\n",
+    "binom_dist = binom (n,p) #p from the previous exercise is the probability of being overhelmed in 1 hour\n",
+    "\n",
+    "prob = binom_dist.cdf(13200) # the prob of having (550 sucess x 24h) \n",
     "\n",
     "print(f\"The probability of website being overhelmed at some point during a day is {prob}%\") "
    ]
@@ -232,23 +218,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability of a client arrival in the next 5 minutes is 55.07%\n"
+      "The probability of a client arrival in the next 5 minutes is 1.27%\n"
      ]
     }
    ],
    "source": [
+    "#exponential distribution\n",
     "from scipy.stats import expon\n",
     "\n",
-    "lambda_value = 0.16 #the parameter represents the rate of customers that arrives every 10 minutes\n",
+    "lambda_value = 0.16 #customers arrives every 10 minutes (10m/60m = 0.16)\n",
     "lambda_inv = expon(scale = 1/lambda_value)\n",
-    "prob = round(lambda_inv.cdf(5)*100,2)\n",
+    "prob = round(lambda_inv.cdf(0.08)*100,2) #(5/60 = 0.08)\n",
     "\n",
     "print(f\"The probability of a client arrival in the next 5 minutes is {prob}%\")"
    ]
@@ -264,23 +251,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability of employee take a 5minutes break after 15min with no customer is 90.93%\n"
+      "The probability of employee taking a 5 minute break after 15min with no customer is 99.82304668422415%\n"
      ]
     }
    ],
    "source": [
-    "lambda_value = 0.16 #the parameter represents the rate of customers that arrives every 10 minutes\n",
-    "lambda_inv = expon(scale = 1/lambda_value)\n",
-    "prob = round(lambda_inv.cdf(15)*100,2)\n",
+    "#poisson distribution\n",
+    "mu = 12 # average number of visits per hour from, evert five minutes\n",
+    "poisson_dist = poisson(mu)\n",
+    "prob = poisson_dist.pmf(3) #probs of having one event in 15 minutes\n",
+    "prob\n",
+    "print(f\"The probability of employee taking a 5 minute break after 15min with no customer is {(1-prob)*100}%\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of employee taking a 5 minute break after 15min with no customer is 100.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# #exponencial distribution - model time between events that happen one after another\n",
+    "# lambda_value = 5 #client arrives every 5 minutes\n",
+    "# lambda_inv = expon(scale = 1/lambda_value)\n",
+    "# prob = round(lambda_inv.cdf(7)*100,2) #probability of taking a break after 15 minutes without a client\n",
     "\n",
-    "print(f\"The probability of employee take a 5minutes break after 15min with no customer is {prob}%\")"
+    "# print(f\"The probability of employee taking a 5 minute break after 15min with no customer is {prob}%\")"
    ]
   },
   {
@@ -339,30 +349,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability for component failing within the first 30h is 13.93%\n"
+     ]
     }
    ],
    "source": [
     "#code here\n",
-    "from scipy.stats import expon\n",
-    "\n",
-    "#the parameter represents the rate of events occuring per unit of time\n",
-    "lambda_value = 300\n",
-    "\n",
+    "from scipy.stats import expon #represents the rate of events occuring per unit of time\n",
+    " \n",
+    "lambda_value = 0.50 #lifetime of 50 hours\n",
     "lambda_inv = expon(scale = 1/lambda_value)\n",
     "\n",
-    "lambda_inv.cdf(180)"
+    "prob = lambda_inv.cdf(0.30) #probability of failing in the firts 30 hours?\n",
+    "print(f\"The probability for component failing within the first 30h is {round(prob*100,2)}%\")"
    ]
   }
  ],
